--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -446,7 +446,7 @@ ozone and particulate matter) follows at the end of this section.
 %\newpage
 \subsection*{Peer-reviewed publications in 2020}
 
-The following scientific papers of relevance to transboundary acidification, eutrophication, ground level ozone and particulate matter, involving EMEP/MSC-W and EMEP/CCC staff, have become available in 2019:
+The following scientific papers of relevance to transboundary acidification, eutrophication, ground level ozone and particulate matter, involving EMEP/MSC-W and EMEP/CCC staff, have become available in 2020:
 
 \enlargethispage{\baselineskip}
 \begin{list}{}{\setlength{\leftmargin}{15pt}\setlength{\itemindent}{-\leftmargin}}\small
@@ -462,6 +462,12 @@ Blechschmidt, Anne-Marlene; Arteta, Joaquim; Coman, Adriana; Curier, Lyana; Eske
 Comparison of tropospheric NO2 columns from MAX-DOAS retrievals and regional air quality model simulations.
 Atmospheric Chemistry and Physics ; 2020; 20 p. 2795-2823
 DOI: 10.5194/acp-20-2795-2020 
+
+\item[]
+Collaud Coen, M., Andrews, E., Alastuey, A., Arsov, T. P., Backman, J., Brem, B. T., Bukowiecki, N., Couret, C., Eleftheriadis, K., Flentje, H., Fiebig, M., Gysel-Beer, M., Hand, J. L., Hoffer, A., Hooda, R., Hueglin, C., Joubert, W., Keywood, M., Kim, J. E., Kim, S.-W., Labuschagne, C., Lin, N.-H., Lin, Y., Lund Myhre, C., Luoma, K., Lyamani, H., Marinoni, A., Mayol-Bracero, O. L., Mihalopoulos, N., Pandolfi, M., Prats, N., Prenni, A. J., Putaud, J.-P., Ries, L., Reisen, F., Sellegri, K., Sharma, S., Sheridan, P., Sherman, J. P., Sun, J., Titos, G., Torres, E., Tuch, T., Weller, R., Wiedensohler, A., Zieger, P., and Laj, P.
+Multidecadal trend analysis of in situ aerosol radiative properties around the world.
+Atmos. Chem. Phys., 20, 8867–8908, 2020.
+DOI: 10.5194/acp-20-8867-2020 
 
 \item[]
 Denby, Bruce; Gauss, Michael; Wind, Peter; Mu, Qing; Wærsted, Eivind Grøtting; Fagerli, Hilde; Valdebenito Bustamante, Alvaro Moises; Klein, Heiko.
@@ -512,10 +518,28 @@ Journal of Environmental Radioactivity ; 2020; 214-215; 106159
 DOI: 10.1016/j.jenvrad.2020.106159
 
 \item[]
+Lee, H., Lee, K., Lunder, C. R., Krejci, R., Aas, W., Park, J., Park, K.-T., Lee, B. Y., Yoon, Y. J., and Park, K.
+Atmospheric new particle formation characteristics in the Arctic as measured at Mount Zeppelin, Svalbard, from 2016 to 2018, 
+Atmos. Chem. Phys., 20, 13425–13441,2020.
+DOI:10.5194/acp-20-13425-2020
+
+\item[]
+Mortier, A., Gliß, J., Schulz, M., Aas, W., Andrews, E., Bian, H., Chin, M., Ginoux, P., Hand, J., Holben, B., Zhang, H., Kipling, Z., Kirkevåg, A., Laj, P., Lurton, T., Myhre, G., Neubauer, D., Olivié, D., von Salzen, K., Skeie, R. B., Takemura, T., and Tilmes, S.
+Evaluation of climate model aerosol trends with ground-based observations over the last 2 decades – an AeroCom and CMIP6 analysis, 
+Atmos. Chem. Phys., 20, 13355–13378, 2020.
+DOI:10.5194/acp-20-13355-2020
+
+\item[]
 Mwase, Nandi S.; Ekstrøm, Alicia; Jonson, Jan Eiof; Svensson, Erik; Jalkanen, Jukka-Pekka; Wichmann, Janine; Molnar, Peter; Stockfelt, Leo.
 Health Impact of Air Pollution from Shipping in the Baltic Sea: Effects of Different Spatial Resolutions in Sweden.
 International Journal of Environmental Research and Public Health (IJERPH) 2020; 17.(21)
 DOI: 10.3390/ijerph17217963 
+
+\item[]
+Evangeliou, N., Grythe, H., Klimont, Z.  Heyes,C. , Eckhardt, S., Lopez-Aparicio, S., Stohl,A. 
+Atmospheric transport is a major pathway of microplastics to remote regions. 
+Nat Commun 11, 3381 (2020). 
+DOI: 10.1038/s41467-020-17201-9
 
 \item[]
 Pommier, Matthieu; Fagerli, Hilde; Schulz, Michael; Valdebenito, Alvaro; Kranenburg, Richard; Schaap, Martijn.
@@ -557,7 +581,7 @@ DOI: 10.1029/2020 GL089184
 \end{list}
 
 
-\subsection*{Associated EMEP reports and notes in 2020}
+\subsection*{Associated EMEP reports and notes in 2021}
 
 \leftline{\bf Joint reports}
 \vspace{0.5cm}
@@ -598,33 +622,29 @@ Transboundary particulate matter, photo-oxidants, acidification and eutrophicati
 
 
 \leftline{\bf CCC Technical and Data reports}
-%NB Check if it is correct for 2020! E.g. authors and titles
+
 \enlargethispage{\baselineskip}
 \begin{list}{}{\setlength{\leftmargin}{15pt}\setlength{\itemindent}{-\leftmargin}}\small
 \item[]
 Anne-Gunn Hjellbrekke. 
-Data Report 2018. Particulate matter, carbonaceous and inorganic compounds.
-EMEP/CCC-Report 1/2020
+Data Report 2019. Particulate matter, carbonaceous and inorganic compounds.
+EMEP/CCC-Report 1/2021
 
 \item[]
 Anne-Gunn Hjellbrekke and Sverre Solberg. 
-Ozone measurements 2018. 
-EMEP/CCC-Report 2/2020
+Ozone measurements 2019. 
+EMEP/CCC-Report 2/2021
 
 \item[]
 Wenche Aas and Pernilla Bohlin Nizzetto. 
-Heavy metals and POP measurements 2018.
-EMEP/CCC-Report 3/2020
+Heavy metals and POP measurements 2019.
+EMEP/CCC-Report 3/2021
 
 \item[]
 Sverre Solberg, Anja Claude and Stefan Reimann. 
-VOC measurements 2018. 
-EMEP/CCC-Report 4/2020
+VOC measurements 2019. 
+EMEP/CCC-Report 4/2021
 
-\item[]
-Katrine Aspmo Pfaffhuber, Anne-Gunn Hjellbrekke, Hilde Uggerud  and Wenche Aas. 
-Analytical intercomparison of inorganic components and heavy metals from 2000 to 2019.
-EMEP/CCC-Report 5/2020
 \end{list}
 
 
@@ -634,29 +654,16 @@ EMEP/CCC-Report 5/2020
 \begin{list}{}{\setlength{\leftmargin}{15pt}\setlength{\itemindent}{-\leftmargin}}\small
 
 \item[]  
-  Bradley Matthews and Robert Wankm\"uller.
-  Methodologies applied to the CEIP GNFR gap-filling 2020 for the years 2010-2018. Part I: Main pollutants and Particulate Matter (\nox, NMVOCs, \sox, \nhiii, CO, PM$_{2.5}$, PM$_{10}$, PM$_{coarse}$ and BC),  Technical Report CEIP 1/2020
+Sabine Schindlbacher, Bradly Matthews and Bernhard Ullrich. Uncertainties and recalculations of emission inventories submitted under CLRTAP, Technical Report CEIP 1/2021
 
 \item[]
-  Stephan Poupa and Robert Wankm\"uller.
-  Methodologies applied to the CEIP GNFR gap-filling 2020 for the years 2010-2018. Part II: Heavy Metals (Pb, Cd, Hg),  Technical Report CEIP 1/2020
+Bradley Matthews and Robert Wankmueller. Part I:  Main pollutants , Particulate Matter and BC (NOx, NMVOCs, SOx, NH3, CO, PM2.5, PM10, PMcoarse, BC), Technical Report CEIP 2/2021
 
 \item[]
-  Stephan Poupa and Robert Wankm\"uller. 
-Methodologies applied to the CEIP GNFR gap-filling 2020 for the years 2010-2018. Part III: Persistent organic pollutants (Benzo(a)pyrene, Benzo(b)fluoranthene, Benzo(k)fluoranthene, Indeno(1,2,3-cd)pyrene, Total polycyclic aromatic hydrocarbons, Dioxin and Furan, Hexachlorobenzene, Polychlorinated biphenyls), Technical Report CEIP 1/2020
-  
+ Katarina Mareckova, Marion Pinterits, Bernhard Ullrich,  Robert Wankmueller, Thomas Bartmann and Sabine Schindlbacher. Inventory Review 2021,  Technical Report CEIP 3/2021
   
 \item[]
-  Marion Pinterits, Bernhard Ullrich, Katarina Mareckova, Robert  Wankm\"uller and Markus Anys. 
-  Inventory review 2020. Review of emission data reported under the LRTAP
-Convention and NEC Directive.  Stage 1 and 2 review. Status of gridded
-and LPS data. Technical Report CEIP 2/2020
-
-\item[]
-  Marion Pinterits, Katarina Mareckova, Robert Wankm\"uller  and Sabine Schindlbacher.
-  Methodology report, Technical Report CEIP 3/2020
-
-  
+Katarina Mareckova, Robert Wankmueller, Marion Pinterits, Bernhard Ullrich and Sabine Schindlbacher. Methodology report, Technical Report CEIP 4/2021
 
 \end{list}
 
