Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -750,10 +750,10 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 \subsection{Elemental Carbon, EC}
 \label{ss:trendsEC}
 
-Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 from 15 EMEP sites, as annual values and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the modelled field of modelled EC.
+Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 from 15 EMEP sites, as annual values, and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the modelled field of modelled EC.
 %
 A 4.5$\pm$1.5\%/yr reduction (Tab.~\ref{tab:KEX1}) 
- \COMMENT{DS: changed "-X\%" xx reduction to just X\% reduction. Should be careful throughout...}
+ \COMMENT{DS: changed "-X\%" xx reduction to just X\% reduction. Should be careful throughout... very inconsistent now}
 in elemental carbon (EC) for 2010--2019 was
 calculated for the 15 sites assessed, which is
 quite comparable to the reduction (-5.0$\pm$0.9\%/yr)
