--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -750,7 +750,9 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 \subsection{Elemental Carbon, EC}
 \label{ss:trendsEC}
 
-Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 from 15 EMEP sites, as annual values, and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the modelled field of modelled EC.
+Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 from 15 EMEP sites, as annual values, and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:ECarrows}, and Fig.\ref{fig:ECtrends} shows again the annual trends, but superimposed upon the field of modelled EC.
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010-2019, and for different seasons. 
+
 %
 A 4.5$\pm$1.5\%/yr reduction (Tab.~\ref{tab:KEX1}) 
  \COMMENT{DS: changed "-X\%" xx reduction to just X\% reduction. Should be careful throughout... very inconsistent now}
@@ -768,7 +770,7 @@ highest EC levels, i.e., at Iskrba (-7\%/yr) in Slovenia and at Ispra
 were the only sites where a statistically significant reduction was
 observed for all seasons, being most pronounced in summer, although
 by a small margin. When considering all sites, the reduction was most
-pronounced in summer and fall (Tab.~\ref{tab:KEX1}), but the general picture is
+pronounced in summer and fall (Tab.~\ref{tab:KEX1},Fig.~\ref{fig:KEX1}), but the general picture is
 that there is a minor seasonal variability in the reduction of EC. It can be noted though that
 there are more sites with significant trends (p-values $<$ 0.05)  in summer than winter (Fig.\ref{fig:ECarrows}).
 
@@ -827,7 +829,7 @@ autumn &              15 &          8 &          11 &                  -0.023 & 
 
 \begin{figure}[t]
 \includegraphics[width=16cm]{FIGS_TRENDS/ECOC_trends.png}
-\caption{Observed and modeled concentrations and trends of EC and OC at 15 EMEP
+\caption{Observed and modelled concentrations and trends of EC and OC at 15 EMEP
   site across Europe for 2010--2019, showing the concentrations
   (left panels) of OC (upper) and EC (lower), aggregated annual and
   seasonal relative changes (mid panels) for OC (upper) and EC (lower),
@@ -852,6 +854,7 @@ autumn &              15 &          8 &          11 &                  -0.023 & 
 \label{ss:trendsOC}
  
  Table~\ref{tab:KEX2} presents the absolute and relative changes in OC over 2010-2019 from 15 EMEP sites, as annual values and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:OCarrows}, and Fig.\ref{fig:OCtrends} shows again the annual trends, but superimposed upon the modelled field of modelled OC.
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. 
  %
 A 2.4$\pm$1.6\%/yr reduction
   in organic carbon (OC) for 2010--2020
@@ -866,7 +869,7 @@ sites (Fig.\ref{fig:OCtrends}).
 
 % From KE .docx. Assume 
 %\begin{figure}
-%\caption{Map showing relative change (\%/yr) in observed and modeled OC (left
+%\caption{Map showing relative change (\%/yr) in observed and modelled OC (left
 %  panel) and EC (right panel) at 15 EMEP sites across Europe. \label{fig:KEX2}}
 %\end{figure}
 
@@ -887,7 +890,7 @@ Figure~\ref{fig:OCarrows} makes it clear that there were large differences in bo
 
 \begin{table}
  \caption{Absolute change ( \ugC/yr) and relative change (\%/yr) and
-   corresponding confidence intervals in observed and modeled annual
+   corresponding confidence intervals in observed and modelled annual
    and seasonal aggregated OC concentrations at 15 sites across Europe
    for 2010--2020. The number of sites with a significant outcome
    is provided. \label{tab:KEX2}
@@ -1045,7 +1048,7 @@ less successful abatement of anthropogenic sources cannot be excluded.
 
 \begin{figure}
 \includegraphics[width=16cm]{FIGS_TRENDS/ECOC_ratio_trends.png}
- \caption{Observed and modeled ratios and trends of OC/\pmfine and EC/\pmfine for
+ \caption{Observed and modelled ratios and trends of OC/\pmfine and EC/\pmfine for
   15 EMEP sites across Europe for 2010--2020, showing the trends
   (left panels) of OC/\pmfine (upper) and EC (lower), aggregated annual and
   seasonal relative changes (mid panels) for OC (upper) and EC (lower),
@@ -1093,7 +1096,7 @@ OC/\pmfine.
  \caption{
   Mass balance of \pmfine at  Birkenes (NO02), Diabla Gora
   (PL05), Iskrba (SI08) and Ispra (IT04) including OM, EC, \ce{SO4^2-}, \ce{NO3^-}, \ce{NH4^+} from 
-  observations (left), modeled (middle) and apportionment of eBC
+  observations (left), modelled (middle) and apportionment of eBC
   into biomass burning/solid fuel (\EBCff) and fossil fuel/liquid fuel
   (\EBCbb) for winter 2017/2018 (right). Note that at NO02 and PLO5 the SIA components in observations are from filterpack sampler with no cutoff and probably overestimate the \pmfine SIA. \label{fig:KEX4}
  }
@@ -1126,7 +1129,7 @@ of OM.
 \centering
 \parbox{14cm}{
  \caption{
-   Absolute and relative change and the corresponding 95\% confidence intervals in observed and modeled annual and seasonal    aggregated OC/\pmfine and EC/\pmfine ratios at 15 sites across Europe
+   Absolute and relative change and the corresponding 95\% confidence intervals in observed and modelled annual and seasonal    aggregated OC/\pmfine and EC/\pmfine ratios at 15 sites across Europe
    for 2010--2020. The number of sites with a significant outcome is provided.\label{tab:KEX3}
  }}
  \scalebox{0.95}{%
